Moving dev environment to Eclipse v3.1
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@3632 51baf565-9d33-0410-a72c-fc3788e3496d